# crypt-arbitrage

./: .gitignore  README.md  crypt-arbitrage.py  e2e_config.toml  pyproject.toml  requirements.txt  setup_and_test.sh
doc/: PLAN.md  SPEC.md
examples/: 01_ofi_monte_carlo.toml  02_bollinger_reversion.toml  03_hft_scalping.toml
optimizer/: __init__.py  cli.py  config.py  engine.py  reporting.py
optimizer/data/: loader.py
optimizer/strategy/: base.py  bollinger.py  ofi.py  registry.py
optimizer/tests/: test_config.py  test_economics.py  test_engine.py  test_phase4.py  test_strategies.py  test_strategy.py
reports/e2e_ofi_test/: results.json
reports/example_bollinger_reversion/: results.json
reports/example_hft_scalping/: results.json
reports/example_ofi_monte_carlo/: results.json
