[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
    "crypto-rs-backtester",
    "matplotlib",
    "numpy",
    "optimizer",
    "polars",
    "pydantic",
    "requests",
]
name = "crypt_arbitrage"
requires-python = ">=3.12"
version = "0.1.0"

[[project.authors]]
name = "takurot"
